# ros2-course

./: .clang-format  .gitignore  CppNodeTemplate.cpp  README.md
ROS/: CppNodeTemplate.cpp  README.md
ROS/ros2_ws/src/my_cpp_pkg/: CMakeLists.txt  package.xml
ROS/ros2_ws/src/my_cpp_pkg/src/: AddTwoIntsClient.cpp  AddTwoIntsClientNoOop.cpp  HardwareStatusPublisher.cpp  MyFirstNode.cpp  NumberCounter.cpp  NumberPublisher.cpp  RobotNewsStation.cpp  Smartphone.cpp
ROS/ros2_ws/src/my_py_pkg/: package.xml  setup.py
ROS/ros2_ws/src/my_py_pkg/my_py_pkg/: add_two_ints_server.py  counter_reseter.py  led_panel.py  my_first_node.py  number_counter.py  number_publisher.py  robot_news_station.py  smartphone.py
ros2_ws/src/my_cpp_pkg/src/: AddTwoIntsServer.cpp  NumberPublisher.cpp
ros2_ws/src/my_py_pkg/: package.xml
ros2_ws/src/my_py_pkg/my_py_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  battery.py  hardware_status_publisher.py  led_panel.py  number_counter.py  py_node_template.py
ros2_ws/src/my_robot_interfaces/: CMakeLists.txt  package.xml
